# TIAGo-Robot-Perception

./: Dockerfile  README.md  cor_mdp_tiago.rosinstall
Perception_packages/detection_3d_to_markers/src/: detection_3d_to_markers_node.cpp
Perception_packages/pcl_obstacle_detector/: CMakeLists.txt  README.md
Perception_packages/pcl_obstacle_detector/src/: pcl_obstacle_detector.cpp
Perception_packages/person_detector/: CMakeLists.txt  README.md  package.xml
Perception_packages/person_detector/include/: tf_transforms.hpp
cor_mdp_tiago_gazebo/: CMakeLists.txt  package.xml
cor_mdp_tiago_gazebo/config/: AH_store_tags.yaml  tiago.rviz
cor_mdp_tiago_gazebo/launch/: tiago.launch  tiago_ahold.launch  tiago_festo.launch
cor_mdp_tiago_gazebo/maps/mdp_ahold/: map.pgm
cor_mdp_tiago_gazebo/models/reception/: model.config  model.sdf
cor_mdp_tiago_gazebo/models/reception/reception/: model.sdf
cor_mdp_tiago_gazebo/scripts/: set_gazebo_env.sh
cor_mdp_tiago_gazebo/worlds/: mdp_ahold.world  mdp_festo.world
detection_3d_to_markers/src/: detection_3d_to_markers.cpp
hri/: CMakeLists.txt  README.md  package.xml
hri/action/: gesture.action  speech.action
hri/include/: make_gesture.h
hri/launch/: hri.launch  speech.launch  world.launch
hri/scripts/: speech.py  talk.py  test.py
hri/speeches/: ending.txt  introduction.txt  not_working_properly.txt  point_of_interest1.txt  welcome.txt
hri/src/: hri_gesture_node.cpp  hri_wave_node.cpp  make_gesture.cpp  wave.cpp
motion_manager/: CMakeLists.txt  README.md  package.xml
motion_manager/scripts/: motion_manager.py  random_position_generator.py
pcl_obstacle_detector/: CMakeLists.txt  package.xml
pcl_obstacle_detector/include/: pcl_obstacle_detector.h
pcl_obstacle_detector/launch/: solution.launch
pcl_obstacle_detector/src/: pcl_obstacle_detector.cpp
person_detector/: CMakeLists.txt  README.md  package.xml
person_detector/action/: person_detector.action
person_detector/launch/: detector.launch
person_detector/src/: person_detector.cpp
